--- a/Customer churn.ipynb
+++ b/Customer churn.ipynb
@@ -1465,7 +1465,7 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import confusion_matrix , classification_report\n",
+    "from sklearn.metrics import classification_report\n",
     "\n",
     "print(classification_report(y_test,y_pred))"
    ]
